# fastload_txt

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
benchmarks/: bench.py
src/: chunk_parser.h  fast_loadtxt.cpp  file_mapper.h  line_scanner.h
src/fast_loadtxt/: __init__.py
