[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "fast_loadtxt"
version = "0.1.0"
description = "High-performance numpy.loadtxt replacement using mmap + OpenMP + fast_float"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/aayush21-work/fast_loadtxt"
Issues = "https://github.com/aayush21-work/fast_loadtxt/issues"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/fast_loadtxt"]
